added JS_itemBox--children class

--- a/_includes/blocks/popup/ms-incl-excl-filter-sublist.html
+++ b/_includes/blocks/popup/ms-incl-excl-filter-sublist.html
@@ -1,4 +1,4 @@
-<div class="itemBox itemBox--children-sublist JS_itemBox--filterInclExcl">
+<div class="itemBox JS_itemBox--children itemBox--children-sublist JS_itemBox--filterInclExcl">
   <ul class="itemBox__row">
     <li class="itemBox__cell">
       <div class="itemBox__cellInner JS_itemBox__cellInner--inclExcl" data-filter="Include">
