--- a/_includes/javascript/selectedBlock-Include.html
+++ b/_includes/javascript/selectedBlock-Include.html
@@ -16,6 +16,6 @@
   </li>
 </ul>
 
-<div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenInclude">
+<div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildrenInclude">
   <div class="itemBoxBody--sortableConnected itemBoxBody--sortableInclude ui-sortable"></div>
 </div>
