--- a/_includes/javascript/selectedBlock.html
+++ b/_includes/javascript/selectedBlock.html
@@ -11,7 +11,7 @@
       </div>
     </li>
 </ul>
-<div class="itemBox itemBox--children  JS_multiSelector__box--selectionChildren">
+<div class="itemBox JS_itemBox--children itemBox--children  JS_multiSelector__box--selectionChildren">
   <div class="JS_sortable">
     ${selectedFilters}
   </div>
