--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -29,7 +29,7 @@
       </li>
     </ul>
 
-    <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildren">
+    <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildren">
       <div class="itemBoxBody--sortable ui-sortable">
         <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--selectionTitleInclude">
           <li class="itemBox__cell itemBox__cell--action JS_toggle">
@@ -49,7 +49,7 @@
           </li>
         </ul>
 
-        <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenInclude">
+        <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildrenInclude">
           <div class="itemBoxBody--sortableConnected itemBoxBody--sortableInclude ui-sortable">
             <ul class="itemBox__row itemBox__row--item JS_filterableCell JS_sortable">
               <li class="itemBox__cell">
@@ -113,7 +113,7 @@
           </li>
         </ul>
 
-        <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenExclude">
+        <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildrenExclude">
           <div class="itemBoxBody--sortableConnected itemBoxBody--sortableExclude ui-sortable">
             <ul class="itemBox__row itemBox__row--item JS_filterableCell">
               <li class="itemBox__cell">
@@ -175,7 +175,7 @@
       </li>
     </ul>
 
-    <div class="itemBox itemBox--children JS_multiSelector__box--optionsChildren">
+    <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--optionsChildren">
       <ul class="itemBox__row">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
@@ -189,7 +189,7 @@
         </li>
       </ul>
 
-      <div class="itemBox itemBox--children">
+      <div class="itemBox JS_itemBox--children itemBox--children">
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell ">
             <div class="itemBox__cellInner ">
@@ -228,7 +228,7 @@
         </li>
       </ul>
 
-      <div class="itemBox itemBox--children">
+      <div class="itemBox JS_itemBox--children itemBox--children">
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell ">
             <div class="itemBox__cellInner ">
@@ -268,7 +268,7 @@
         </li>
       </ul>
 
-      <div class="itemBox itemBox--children">
+      <div class="itemBox JS_itemBox--children itemBox--children">
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell">
             <div class="itemBox__cellInner">
@@ -307,7 +307,7 @@
         </li>
       </ul>
 
-      <div class="itemBox itemBox--children">
+      <div class="itemBox JS_itemBox--children itemBox--children">
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell ">
             <div class="itemBox__cellInner ">
