--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -31,7 +31,7 @@
       </li>
     </ul>
 
-    <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildren">
+    <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildren">
       <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--selectionTitleInclude">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
@@ -50,7 +50,7 @@
         </li>
       </ul>
 
-      <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenInclude">
+      <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildrenInclude">
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell">
             <div class="itemBox__cellInner">
@@ -123,7 +123,7 @@
         </li>
       </ul>
 
-      <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenExclude">
+      <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildrenExclude">
         <div class="itemBoxTable">
           <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableExclude ui-sortable">
             <ul class="itemBox__row itemBox__row--item JS_filterableCell">
@@ -199,7 +199,7 @@
       </li>
     </ul>
 
-    <div class="itemBox itemBox--children JS_multiSelector__box--optionsChildren">
+    <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--optionsChildren">
       <ul class="itemBox__row itemBox__row--item JS_filterableCell">
         <li class="itemBox__cell ">
           <div class="itemBox__cellInner">
