--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -27,7 +27,7 @@
       </li>
     </ul>
 
-    <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildren">
+    <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildren">
       <div class="JS_sortable ui-sortable">
         {% for item in site.data.tag-picker-color.selected %}
           <ul class="itemBox__row itemBox__row--item JS_filterableCell">
@@ -79,7 +79,7 @@
       </li>
     </ul>
 
-    <div class="itemBox itemBox--children JS_multiSelector__box--optionsChildren">
+    <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--optionsChildren">
       {% for item in site.data.tag-picker-color.options %}
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell ">
