--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -114,7 +114,7 @@
     </li>
   </ul>
 
-  <div class="itemBox itemBox--children">
+  <div class="itemBox JS_itemBox--children itemBox--children">
     <ul class="itemBox__row itemBox__row--h1">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
@@ -266,7 +266,7 @@
 
     {% include blocks/itembox-row.html %}
 
-    <div class="itemBox itemBox--children">
+    <div class="itemBox JS_itemBox--children itemBox--children">
       <ul class="itemBox__row itemBox__row--h1">
         <li class="itemBox__cell">
           <div class="itemBox__cellInner">
