--- a/_includes/javascript/selectedBlock-Exclude.html
+++ b/_includes/javascript/selectedBlock-Exclude.html
@@ -16,6 +16,6 @@
   </li>
 </ul>
 
-<div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenExclude">
+<div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildrenExclude">
   <div class="itemBoxBody--sortableConnected itemBoxBody--sortableExclude ui-sortable"></div>
 </div>
