Table expand/collapse: top header works

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -31,9 +31,9 @@
   </ul>
 
   <ul class="itemBox__row itemBox__row--h2">
-    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_expand">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action JS_expand">ऄ</div>
+        <div class="itemBox__action">ऄ</div>
       </div>
     </li>
     <li class="itemBox__cell">
@@ -84,7 +84,7 @@
   </ul>
 
   <ul class="itemBox__row itemBox__row--item">
-    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_expand">
       <div class="itemBox__cellInner">
         <div class="itemBox__action">ऄ</div>
       </div>
@@ -144,7 +144,7 @@
     </ul>
 
     <ul class="itemBox__row itemBox__row--h2">
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_expand">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ऄ</div>
         </div>
@@ -208,7 +208,7 @@
     </ul>
 
     <ul class="itemBox__row itemBox__row--item">
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action .JS_expand">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ऄ</div>
         </div>
@@ -296,7 +296,7 @@
       </ul>
 
       <ul class="itemBox__row itemBox__row--h2">
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_expand">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">ऄ</div>
           </div>
