Table expand/collapse wrong order of rows fixed

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -206,9 +206,10 @@
         </div>
       </li>
     </ul>
+    {% include blocks/itembox-row.html %}
 
     <ul class="itemBox__row itemBox__row--item">
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action .JS_expand">
+      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_expand">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ऄ</div>
         </div>
@@ -264,7 +265,6 @@
       </li>
     </ul>
 
-    {% include blocks/itembox-row.html %}
 
     <div class="itemBox JS_itemBox--children itemBox--children">
       <ul class="itemBox__row itemBox__row--h1">
