--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -207,66 +207,64 @@
       </li>
     </ul>
     {% include blocks/itembox-row.html %}
-
-    <ul class="itemBox__row itemBox__row--item">
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_expand">
-        <div class="itemBox__cellInner">
-          <div class="itemBox__action">ऄ</div>
-        </div>
-      </li>
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">Road constructions</div>
-      </li>
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">lorem ipsum dolor sit amet</div>
-      </li>
-      <li class="itemBox__cell itemBox__cell--flex3">
-        <div class="itemBox__cellInner">
-
-          <div class="pmx-selector pmx-selector--expanded pmx-selector--multiselect JS_selector">
-            <div class="pmx-selector__item  pmx-selector__item--selected JS_selectorItem">
-              <div class="pmx-selector__block">
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51;">ग़</div>
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--label">design</div>
-                <div class="pmx-selector__blockSeperator"></div>
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">UI/UX</div>
-              </div>
-            </div>
-            <div class="pmx-selector__itemSeperator"></div>
-            <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-              <div class="pmx-selector__block">
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: orange;">ग़</div>
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--label">comp</div>
-                <div class="pmx-selector__blockSeperator"></div>
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">IT</div>
-              </div>
-            </div>
-            <div class="pmx-selector__itemSeperator"></div>
-            <div class="pmx-selector__item JS_selectorItem">
-              <div class="pmx-selector__block">
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: blue;">ग़</div>
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--label">dev</div>
-                <div class="pmx-selector__blockSeperator"></div>
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Back-end</div>
-              </div>
-            </div>
-            <div class="pmx-selector__itemSeperator"></div>
-            <div class="pmx-selector__item JS_selectorItem">
-              <div class="pmx-selector__block">
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16;">ग़</div>
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--label">status</div>
-                <div class="pmx-selector__blockSeperator"></div>
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Important</div>
-              </div>
-            </div>
+    {% for i in (1..2) %}
+      <ul class="itemBox__row itemBox__row--item">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_expand">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action">ऄ</div>
           </div>
+        </li>
+        <li class="itemBox__cell">
+          <div class="itemBox__cellInner">Road constructions</div>
+        </li>
+        <li class="itemBox__cell">
+          <div class="itemBox__cellInner">lorem ipsum dolor sit amet</div>
+        </li>
+        <li class="itemBox__cell itemBox__cell--flex3">
+          <div class="itemBox__cellInner">
 
-        </div>
-      </li>
-    </ul>
+            <div class="pmx-selector pmx-selector--expanded pmx-selector--multiselect JS_selector">
+              <div class="pmx-selector__item  pmx-selector__item--selected JS_selectorItem">
+                <div class="pmx-selector__block">
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0bda51;">ग़</div>
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--label">design</div>
+                  <div class="pmx-selector__blockSeperator"></div>
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">UI/UX</div>
+                </div>
+              </div>
+              <div class="pmx-selector__itemSeperator"></div>
+              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                <div class="pmx-selector__block">
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: orange;">ग़</div>
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--label">comp</div>
+                  <div class="pmx-selector__blockSeperator"></div>
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">IT</div>
+                </div>
+              </div>
+              <div class="pmx-selector__itemSeperator"></div>
+              <div class="pmx-selector__item JS_selectorItem">
+                <div class="pmx-selector__block">
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: blue;">ग़</div>
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--label">dev</div>
+                  <div class="pmx-selector__blockSeperator"></div>
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Back-end</div>
+                </div>
+              </div>
+              <div class="pmx-selector__itemSeperator"></div>
+              <div class="pmx-selector__item JS_selectorItem">
+                <div class="pmx-selector__block">
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16;">ग़</div>
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--label">status</div>
+                  <div class="pmx-selector__blockSeperator"></div>
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Important</div>
+                </div>
+              </div>
+            </div>
 
-
-    <div class="itemBox JS_itemBox--children itemBox--children">
+          </div>
+        </li>
+      </ul>
+      <div class="itemBox JS_itemBox--children itemBox--children">
       <ul class="itemBox__row itemBox__row--h1">
         <li class="itemBox__cell">
           <div class="itemBox__cellInner">
@@ -330,6 +328,7 @@
         </li>
       </ul>
     </div><!-- /.itemBox -->
+    {% endfor %}
 
     {% include blocks/itembox-row.html %}
     {% include blocks/itembox-row.html %}
