fix vertical top position for fields inside pmx-selector

--- a/sass/components/pmx-selector.scss
+++ b/sass/components/pmx-selector.scss
@@ -286,6 +286,7 @@
       z-index: 1;
       position: relative;
       display: inline-block;
+      vertical-align: top;
       height: 26px;
       line-height: 26px;
 
