missing goto styling: breadcrumb popup, app-nav-tab1

--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -27,7 +27,7 @@
       <div class="itemBox JS_itemBox--children itemBox--children JS_children-closed">
         {% for item in group.items %}
           <ul class="itemBox__row itemBox__row--item JS_filterableCell">
-            <li class="itemBox__cell">
+            <li class="itemBox__cell itemBox__cell--permalink">
               <div class="itemBox__cellInner ">
 
                 <div class="pmx-selector pmx-selector--readonly">
