--- a/_includes/popups/singleSelect-breadcrumb.html
+++ b/_includes/popups/singleSelect-breadcrumb.html
@@ -15,7 +15,7 @@
   <div class="itemBox JS_multiSelector__box--optionsChildren">
     {% for item in site.data.breadcrumb-popup.items %}
       <ul class="itemBox__row itemBox__row--item JS_filterableCell">
-        <li class="itemBox__cell">
+        <li class="itemBox__cell itemBox__cell--permalink">
           <div class="itemBox__cellInner JS_text">{{item}}</div>
         </li>
       </ul>
