add edit title field

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -5,7 +5,7 @@
   <ul class="itemBox__row itemBox__row--h1">
     <li class="itemBox__cell itemBox__cell--flex1">
       <div class="itemBox__cellInner">
-        <h2>Lorem ipsum dolor sit amet</h2>
+        <h2 class="font--h2 ellipsis">Lorem ipsum dolor sit amet</h2>
       </div>
     </li>
     <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
@@ -118,7 +118,7 @@
     <ul class="itemBox__row itemBox__row--h1">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
-          <h2>Contruction Reports</h2>
+          <h2 class="font--h2 ellipsis">Contruction Reports</h2>
         </div>
       </li>
       <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
@@ -268,7 +268,7 @@
       <ul class="itemBox__row itemBox__row--h1">
         <li class="itemBox__cell">
           <div class="itemBox__cellInner">
-            <h2>Contruction Reports</h2>
+            <h2 class="font--h2 ellipsis">Contruction Reports</h2>
           </div>
         </li>
         <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
