--- a/sass/blocks/item-header.scss
+++ b/sass/blocks/item-header.scss
@@ -10,24 +10,11 @@
     position: relative;
     background-color: #FFF;
     border-bottom: 2px dashed #CCC;
-    padding: 10px 15px;
-
-    &__title {
-      position: relative;
-      display: inline-block;
-      max-width: 75%;
-
-      h2 {
-        padding: 5px 0;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-    }
+    padding: 10px;
 
     &__meta {
       position: relative;
-      margin: 0 0 0 -15px;
+      margin: 5px 0 5px -10px;
     }
 
     &__type {
@@ -51,14 +38,40 @@
       margin: 0 5px;
     }
 
+    &__title {
+      position: relative;
+      margin: 5px 0;
+      padding: 5px;
+
+      h2 {
+        opacity: 1;
+        transition: all .3s ease-in-out;
+      }
+
+      input {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        padding: 5px;
+        background-color: #FFF;
+        opacity: 0;
+        transition: all .3s ease-in-out;
+        z-index: 1;
+
+        &:focus {
+          opacity: 1;
+          background-color: rgba(205, 220, 57, .2);
+
+          + h2 {
+            opacity: 0;
+          }
+        }
+      }
+    }
+
     &__actions {
-      position: absolute;
-      right: 15px;
-      top: 50%;
-      transform: translateY(-50%);
-      max-width: 25%;
-      width: 100%;
-      text-align: right;
+      padding: 20px 0;
     }
 
     &__action {
