no more toggle class

--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -1,6 +1,6 @@
 <header class="item-header">
   <div class="row">
-    <div class="col col-6">
+    <div class="col col-8">
       <div class="item-header__meta">
         <span class="item-header__type item-header__type--bug font--label">Bug</span>
         <span class="item-header__id">391441</span>
@@ -10,7 +10,7 @@
         <h2 class="font--h2 ellipsis" title="PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END">PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END</h2>
       </div>
     </div>
-    <div class="col col-6 align-right">
+    <div class="col col-4 align-right">
       <div class="item-header__actions">
         <div class="item-header__action">
           <div class="pmx-selector pmx-selector--readonly">
@@ -22,29 +22,29 @@
           </div>
         </div>
         <div class="item-header__action">
-          <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector pmx-selector--required">
+          <div class="pmx-selector pmx-selector--expanded JS_selector">
             <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem JS_toggle-progress">
               <div class="pmx-selector__block">
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">च</div>
+                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix"></div>
               </div>
             </div>
             <div class="pmx-selector__itemSeperator"></div>
             <div class="pmx-selector__item  JS_selectorItem JS_toggle-comments">
               <div class="pmx-selector__block">
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ރ</div>
+                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix"></div>
                 <div class="pmx-selector__blockPart pmx-selector__blockPart--counter"><sup>11</sup></div>
               </div>
             </div>
             <div class="pmx-selector__itemSeperator"></div>
             <div class="pmx-selector__item JS_selectorItem">
               <div class="pmx-selector__block">
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">स</div>
+                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix"></div>
               </div>
             </div>
             <div class="pmx-selector__itemSeperator"></div>
             <div class="pmx-selector__item JS_selectorItem">
               <div class="pmx-selector__block">
-                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ढ़</div>
+                <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix"></div>
               </div>
             </div>
           </div>
