--- a/_includes/blocks/popup/include-exclude-selector.html
+++ b/_includes/blocks/popup/include-exclude-selector.html
@@ -12,7 +12,7 @@
 
 
 
-<div class="pmx-selector pmx-selector--expanded pmx-selector--required pmx-selector--toggleselect JS_selector">
+<div class="pmx-selector pmx-selector--expanded JS_selector">
   <div class="pmx-selector__item JS_selectorItem  {{includeSelectedClass}} JS_itemBox__cellInner--inclExcl" data-filter="Include">
     <div class="pmx-selector__block">
       <div class="pmx-selector__blockPart pmx-selector__blockPart--label">Include</div>
