--- a/_includes/javascript/and-or-selector.html
+++ b/_includes/javascript/and-or-selector.html
@@ -1,13 +1,13 @@
-  <div class="pmx-selector pmx-selector--expanded pmx-selector--required pmx-selector--toggleselect JS_selector">
+  <div class="pmx-selector pmx-selector--expanded JS_selector">
     <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
       <div class="pmx-selector__block">
-        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Or</span>
+        <div class="pmx-selector__blockPart pmx-selector__blockPart--label">Or</div>
       </div>
     </div>
     <div class="pmx-selector__itemSeperator"></div>
     <div class="pmx-selector__item JS_selectorItem">
       <div class="pmx-selector__block">
-        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">And</span>
+        <div class="pmx-selector__blockPart pmx-selector__blockPart--label">And</div>
       </div>
     </div>
   </div>
