--- a/_includes/javascript/itemSelected.html
+++ b/_includes/javascript/itemSelected.html
@@ -1,5 +1,5 @@
 <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_showSelected">
   <div class="itemBox__cellInner">
-    <div class="itemBox__action">✓</div>
+    <div class="itemBox__action"></div>
   </div>
 </li>
