--- a/_includes/popups/old-pmx-multiselect.html
+++ b/_includes/popups/old-pmx-multiselect.html
@@ -3,7 +3,7 @@
     <div class="newpickercontent">
       <div id="tabs" class="old-multiselect-tabs">
 
-        <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector JS_pmx-selector--incl-excl JS_pmx-selector--old">
+        <div class="pmx-selector pmx-selector--expanded JS_selector JS_pmx-selector--incl-excl JS_pmx-selector--old">
           <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem JS_pmx-selector__item--include">
             <div class="pmx-selector__block">
               <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Include</div>
