JS classes: simplifed JS multiselector subparts classes

--- a/_includes/javascript/selectedBlock.html
+++ b/_includes/javascript/selectedBlock.html
@@ -1,4 +1,4 @@
-<ul class="itemBox__row JS_multiSelector__box--selectionTitle">
+<ul class="itemBox__row JS_selectionTitle">
     <li class="itemBox__cell itemBox__cell--action">
       <div class="itemBox__cellInner">
         <div class="itemBox__action">ऄ Selected</div>
@@ -11,7 +11,7 @@
       </div>
     </li>
 </ul>
-<div class="itemBox JS_itemBox--children itemBox--children  JS_multiSelector__box--selectionChildren">
+<div class="itemBox JS_itemBox--children itemBox--children  JS_selectionChildren">
   <div class="JS_sortable">
     ${selectedFilters}
   </div>
