--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="itemBox JS_multiSelector__box">
-    <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--selectionTitle">
+    <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ऄ Selected</div>
@@ -29,9 +29,9 @@
       </li>
     </ul>
 
-    <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildren">
+    <div class="itemBox JS_itemBox--children itemBox--children JS_selectionChildren">
       <div class="itemBoxBody--sortable ui-sortable">
-        <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--selectionTitleInclude">
+        <ul class="itemBox__row itemBox__row--item JS_selectionTitleInclude">
           <li class="itemBox__cell itemBox__cell--action JS_toggle">
             <div class="itemBox__cellInner">
               <div class="itemBox__action">ऄ Include</div>
@@ -49,7 +49,7 @@
           </li>
         </ul>
 
-        <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildrenInclude">
+        <div class="itemBox JS_itemBox--children itemBox--children JS_selectionChildrenInclude">
           <div class="itemBoxBody--sortableConnected itemBoxBody--sortableInclude ui-sortable">
             <ul class="itemBox__row itemBox__row--item JS_filterableCell JS_sortable">
               <li class="itemBox__cell">
@@ -95,7 +95,7 @@
           </div>
         </div>
 
-        <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--selectionTitleExclude">
+        <ul class="itemBox__row itemBox__row--item JS_selectionTitleExclude">
           <li class="itemBox__cell itemBox__cell--action JS_toggle">
             <div class="itemBox__cellInner">
               <div class="itemBox__action">ऄ Exclude</div>
@@ -113,7 +113,7 @@
           </li>
         </ul>
 
-        <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildrenExclude">
+        <div class="itemBox JS_itemBox--children itemBox--children JS_selectionChildrenExclude">
           <div class="itemBoxBody--sortableConnected itemBoxBody--sortableExclude ui-sortable">
             <ul class="itemBox__row itemBox__row--item JS_filterableCell">
               <li class="itemBox__cell">
@@ -162,7 +162,7 @@
     </div>
     <!-- /.itemBox -->
 
-    <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--optionsTitle">
+    <ul class="itemBox__row itemBox__row--item JS_optionsTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">अ All</div>
@@ -175,7 +175,7 @@
       </li>
     </ul>
 
-    <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--optionsChildren">
+    <div class="itemBox JS_itemBox--children itemBox--children JS_optionsChildren">
       <ul class="itemBox__row">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
