--- a/_includes/popups/ms-status.html
+++ b/_includes/popups/ms-status.html
@@ -29,7 +29,7 @@
   </div>
   <!-- /.itemBox -->
 
-  <div class="itemBox JS_multiSelector__box--optionsChildren">
+  <div class="itemBox JS_optionsChildren">
     {% for item in site.data.multiselector-status.items %}
       <ul class="itemBox__row itemBox__row--item JS_filterableCell">
         <li class="itemBox__cell">
