--- a/_includes/popups/singleSelect-breadcrumb.html
+++ b/_includes/popups/singleSelect-breadcrumb.html
@@ -12,7 +12,7 @@
     </ul>
   </div>
 
-  <div class="itemBox JS_multiSelector__box--optionsChildren">
+  <div class="itemBox JS_optionsChildren">
     {% for item in site.data.breadcrumb-popup.items %}
       <ul class="itemBox__row itemBox__row--item JS_filterableCell">
         <li class="itemBox__cell itemBox__cell--permalink">
