--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -13,7 +13,7 @@
   </div>
 
   <div class="itemBox JS_multiSelector__box">
-    <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--selectionTitle">
+    <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ऄ Selected</div>
@@ -31,8 +31,8 @@
       </li>
     </ul>
 
-    <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildren">
-      <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--selectionTitleInclude">
+    <div class="itemBox JS_itemBox--children itemBox--children JS_selectionChildren">
+      <ul class="itemBox__row itemBox__row--item JS_selectionTitleInclude">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">ऄ Include</div>
@@ -50,7 +50,7 @@
         </li>
       </ul>
 
-      <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildrenInclude">
+      <div class="itemBox JS_itemBox--children itemBox--children JS_selectionChildrenInclude">
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell">
             <div class="itemBox__cellInner">
@@ -105,7 +105,7 @@
         </ul>
       </div>
 
-      <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--selectionTitleExclude">
+      <ul class="itemBox__row itemBox__row--item JS_selectionTitleExclude">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">ऄ Exclude</div>
@@ -123,7 +123,7 @@
         </li>
       </ul>
 
-      <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildrenExclude">
+      <div class="itemBox JS_itemBox--children itemBox--children JS_selectionChildrenExclude">
         <div class="itemBoxTable">
           <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableExclude ui-sortable">
             <ul class="itemBox__row itemBox__row--item JS_filterableCell">
@@ -186,7 +186,7 @@
     </div>
     <!-- /.itemBox -->
 
-    <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--optionsTitle">
+    <ul class="itemBox__row itemBox__row--item JS_optionsTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">अ All</div>
@@ -199,7 +199,7 @@
       </li>
     </ul>
 
-    <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--optionsChildren">
+    <div class="itemBox JS_itemBox--children itemBox--children JS_optionsChildren">
       <ul class="itemBox__row itemBox__row--item JS_filterableCell">
         <li class="itemBox__cell ">
           <div class="itemBox__cellInner">
