--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="itemBox JS_multiSelector__box">
-    <ul class="itemBox__row JS_multiSelector__box--selectionTitle">
+    <ul class="itemBox__row JS_selectionTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ऄ Selected</div>
@@ -27,7 +27,7 @@
       </li>
     </ul>
 
-    <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--selectionChildren">
+    <div class="itemBox JS_itemBox--children itemBox--children JS_selectionChildren">
       <div class="JS_sortable ui-sortable">
         {% for item in site.data.tag-picker-color.selected %}
           <ul class="itemBox__row itemBox__row--item JS_filterableCell">
@@ -61,7 +61,7 @@
       </div>
     </div><!-- /.itemBox -->
 
-    <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--optionsTitle">
+    <ul class="itemBox__row itemBox__row--item JS_optionsTitle">
       <li class="itemBox__cell itemBox__cell--toggle JS_toggle">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ऄ All</div>
@@ -79,7 +79,7 @@
       </li>
     </ul>
 
-    <div class="itemBox JS_itemBox--children itemBox--children JS_multiSelector__box--optionsChildren">
+    <div class="itemBox JS_itemBox--children itemBox--children JS_optionsChildren">
       {% for item in site.data.tag-picker-color.options %}
         <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell ">
